--- a/style.css
+++ b/style.css
@@ -130,3 +130,47 @@ font-size: 20px;
   display: none;
   }
   }
+  .footer{
+    padding:10px;
+    background-color:hsl(151, 58%, 30%);
+    color:#ffffff;
+    max-height:150px;
+}
+.row{
+    display: flex;
+}
+.footer{
+    display:flex;
+    gap: 5%;
+    height: 100vh;
+
+}
+ul li{
+    list-style: none;
+    color:hwb(0 100% 0%);
+    
+}
+.logo{
+    width: 60%;
+    height: 50px;
+
+}
+.trues{
+    color: aqua;
+}
+@media screen and (max-width: 800px) {
+        .footer{
+            max-height:600px;
+            width: 95%;
+        }
+            .footer{
+                flex-direction: column;   
+    
+            }
+            .logo{
+                width: 20%;
+                height: 70px;
+            }
+
+    }
+    
